# CATS_Net

./: .gitattributes  .gitignore  LICENSE  README.md  main.py  pyproject.toml
A01_ImageNet/: README.md  argument.py  create_imagenet_webdataset.py  data.py  extract_word2vec.py  gen_imagenet_concept.sh  main.py  model.py  utils.py
A02_Semantic_Analysis/: B01_Get_FeatureData.py  B02_Get_acc_list.py  B03_Grad-CAM.ipynb  B04_ImageNet_hypercategories.ipynb  B05_functional_entropy.ipynb  README.md  extract_symbol_sets.py  extract_wordnet_matches.py
A02_Semantic_Analysis/B06_Rose_plot/: C0_extract_all_features.py  C1_compute_rdm_matrices.py  C2_visualize_rdm_analysis.py  C3_things_features_correlations.py  C4_plot_things_rose_charts.py
A03_Communications/B01_CATS_Net/: C01_CATSNet_CIFAR100_main.py  README.md
A03_Communications/B01_SEA_Net/: README.md  (+1 more)
A04_Word2Vec/: B01_THINGS_main.py  B01_Word2Vec_CIFAR100_main.py  B02_cifar100_word2vec_acc_ttest.m  B03_THINGS_get_results.py  README.md
A05_RSA/: BinderRSA.m  README.md  kmeans_rsa_clustering.m
B01_figures/: NCS_figures.ipynb  NHB_figures.ipynb
Results/: BinderSubDomain_ttest_results.csv  CA_fishZ_rho_Control_long_format.csv  CA_results.csv  Concept_results.csv  THINGS_detailed_results.csv  THINGS_overall_stats.csv  THINGS_results.xlsx  THINGS_summary_results.csv  Tstats_SubLevel.csv  imagenet_subdomain_partialcorr.csv  process_CA.py  single_ct_acc.csv  single_ct_acc.xlsx  tstats_partial_rho.csv  wt_subdomain_partialcorr.csv
manuscript/: CA_TS_Net.bib  sn-article.tex  supplementary_information.tex
(+233 files in other folders)
