[project]
name = "cats-net"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "nvitop>=1.5.3",
    "torch==2.0.1",
    "torchvision==0.15.2",
    "torchaudio==2.0.2",
    "numpy==1.25.2",
    "scipy==1.10.1",
    "matplotlib==3.7.2",
    "seaborn==0.13.2",
    "pandas==2.0.3",
    "tqdm",
    "pillow==9.4.0",
    "scikit-learn==1.4.2",
    "nltk==3.8.1",
    "webdataset>=0.2.100",
    "fasttext>=0.9.3",
    "ipykernel>=6.30.1",
    "pywaffle>=1.1.1",
    "pypalettes>=0.1.4",
    "openpyxl>=3.1.5",
    "cmcrameri>=1.9",
]
[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.uv.sources]
torch = [
  { index = "pytorch-cu117", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu117", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu117", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu117"
url = "https://download.pytorch.org/whl/cu117"
explicit = true
